--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,7 +1,13 @@
+
 <h2><%= @cocktail.name %></h2>
 <h2><% @cocktail.doses.each do |d| %></h2>
 <%= d.description %>
 <%= d.ingredient.name %>
+<%= link_to dose_path(d),
+            method: :delete,
+            data: { confirm: "Are you sure?" } do %>
+            <i class="fa fa-trash destroy_dose"></i><% end %>
 <% end %>
+
 
   <%= link_to "Back to list", cocktails_path %>
