--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -2,6 +2,8 @@
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1551024709-8f23befc6f87?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1425&q=80)">
     <h1>Cocktails</h1>
   </div>
+  <div class="btn"><%= link_to "Add a cocktail", new_cocktail_path, class: "btn btn-primary btn-lg" %></div>
+
 
       <div class="cards">
         <% @cocktails.each do |cocktail| %>
