--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container">
   <h1>Add a New Cocktail</h1>
 
       <%= simple_form_for @cocktail do |f| %>
@@ -8,3 +8,4 @@
 
 
   <%= link_to "Back to list", cocktails_path %>
+</div>
