--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -2,17 +2,22 @@
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1551024709-8f23befc6f87?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1425&q=80)">
     <h1>Cocktails</h1>
   </div>
-  <div class="btn"><%= link_to "Add a cocktail", new_cocktail_path, class: "btn btn-primary btn-lg" %></div>
 
+  <div class="btn"><%= link_to "Add a cocktail", new_cocktail_path, class: "btn btn-primary btn-lg" %></div>
 
       <div class="cards">
         <% @cocktails.each do |cocktail| %>
-          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/dinner.jpg)">
+          <% if cocktail.photo.attached? %>
+            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
+             <%= link_to cocktail.name, cocktail_path(cocktail) %>
+            </div>
+      </div>
+      <% else %>
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1536935338788-846bb9981813?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1286&q=80)">
              <%= link_to cocktail.name, cocktail_path(cocktail) %>
           </div>
         <% end %>
-      </div>
-
-  <div >
+      <% end %>
+</div>
 
 
